Dockeriza el backend (Spring Boot)